# Reasearch_analysis

./: .gitignore  CLAUDE.md  README.md  first_base_plan.md
backend/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/app/: config.py  main.py  observability.py  orchestrator.py  schemas.py
backend/app/agents/: critic.py  planner.py  retriever.py  synthesizer.py
backend/app/llm/: client.py  prompts.py
backend/app/llm/providers/: base.py  gemini.py  openai.py
backend/app/tools/: arxiv_tool.py  base.py  registry.py  semantic_scholar.py  web.py
backend/tests/: conftest.py  test_pipeline.py  test_planner.py  test_tools.py
frontend/: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CitationList.tsx  PlanView.tsx  ProgressTimeline.tsx  QueryBar.tsx  ReportView.tsx
frontend/lib/: sse.ts  types.ts
