[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-copilot-backend"
version = "0.1.0"
description = "Multi-agent research copilot — backend (Planner / Retriever / Critic / Synthesizer)"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "arxiv==2.1.3",
    "google-genai>=0.8.0,<2.0",
    "openai>=1.50.0,<2.0",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "sse-starlette==2.1.3",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-timeout==2.3.1",
    "ruff==0.8.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]
